<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:id="@+id/movie_path"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:contentDescription="URL"
            tools:ignore="HardcodedText,RtlSymmetry" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="5dp">

            <TextView
                android:id="@+id/movie_name"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:maxLines="1"
                android:layout_height="wrap_content"
                android:text="@string/movie_name"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/movie_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:maxLines="2"
                android:text="@string/overview" />

            <TextView
                android:id="@+id/movie_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/release_date" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
